--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "faunadb": "^4.0.0",
     "next": "10.0.5",
     "react": "17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1",
     "swr": "^0.4.0"
